RESOLVED FIXED31577
Incorrect use of JavaScriptCore API in DumpRenderTree
https://bugs.webkit.org/show_bug.cgi?id=31577
Summary Incorrect use of JavaScriptCore API in DumpRenderTree
Oliver Hunt
Reported 2009-11-17 00:02:35 PST
The AccessibilityController returns null into the JavaScriptCore API which is not allowed.
Attachments
Patch (12.95 KB, patch)
2009-11-17 00:08 PST, Oliver Hunt
mjs: review+
Oliver Hunt
Comment 1 2009-11-17 00:08:39 PST
Maciej Stachowiak
Comment 2 2009-11-17 00:09:59 PST
Comment on attachment 43346 [details] Patch r=me
Mark Rowe (bdash)
Comment 3 2009-11-17 02:13:05 PST
Oliver, if this was landed can you please close the bug report.
Oliver Hunt
Comment 4 2009-11-17 09:30:56 PST
Committed r51068
Note You need to log in before you can comment on or make changes to this bug.