Incorrect use of JavaScriptCore API in DumpRenderTree https://bugs.webkit.org/show_bug.cgi?id=31577

Reviewed by Maciej Stachowiak

Return undefined rather than a literal null.

Canonical link: https://commits.webkit.org/42497@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51068 268f45cc-cd09-0410-ab3c-d52691b4dbfc